Add about section

--- a/src/styles/_palette.scss
+++ b/src/styles/_palette.scss
@@ -12,3 +12,7 @@ $font-color-light: $color-light;
 //NAVBAR
 $navbar-bgc: $color-dark;
 $navbar-color: $font-color-light;
+
+//About
+$about-font: $font-color-light;
+$about-border-color: $color-primary;
