--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,7 +1,7 @@
 @import '../../styles/palette';
 
 .root {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background-image: url('/assets/header.jpg');
   background-attachment: fixed;
