Add news section

--- a/src/styles/_palette.scss
+++ b/src/styles/_palette.scss
@@ -16,3 +16,9 @@ $navbar-color: $font-color-light;
 //About
 $about-font: $font-color-light;
 $about-border-color: $color-primary;
+
+
+//News
+$news-bgc: $color-dark;
+$news-color: $font-color-light;
+$news-border-color: $color-primary;
